<resources>
    <string name="app_name">AndroidIntroCalculator</string>
    <string name="background">background</string>
    <string name="key_c">C</string>
    <string name="key_ce">CE</string>
    <string name="key_percent">%</string>
    <string name="key_division">/</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_multiply">X</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_subtract">-</string>
    <string name="key_3">3</string>
    <string name="key_2">2</string>
    <string name="key_1">1</string>
    <string name="key_addition">+</string>
    <string name="key_0">0</string>
    <string name="key_dot">.</string>
    <string name="key_equal">=</string>
    <string name="theme_1">First Theme</string>
    <string name="theme_2">Second Theme</string>
    <string name="select_theme">Select Theme</string>
    <string name="how_to_change_theme">How to change theme</string>
</resources>