<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.CalculatorActivity">

    <ImageView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background"
        android:scaleType="center"
        android:src="@drawable/background" />

    <TextView
        android:id="@+id/result_text_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/window_result"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        tools:text="33334"

        />

    <View
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/margin_top_view"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginBottom="@dimen/standard_margin"
        android:background="@color/my_white" />


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginBottom="@dimen/margin_for_grid"
        android:columnCount="4"
        android:useDefaultMargins="true">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_c"
            style="@style/CalculButtonGreen"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:text="@string/key_c" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_percent"
            style="@style/CalculButtonGreen"
            android:text="@string/key_percent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_division"
            style="?calcActionButton"
            android:text="@string/key_division" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_7"
            style="@style/CalculButtonGreen"
            android:text="@string/key_7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_8"
            style="@style/CalculButtonGreen"
            android:text="@string/key_8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_9"
            style="@style/CalculButtonGreen"
            android:text="@string/key_9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_multiply"
            style="?calcActionButton"
            android:text="@string/key_multiply" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_4"
            style="@style/CalculButtonGreen"
            android:text="@string/key_4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_5"
            style="@style/CalculButtonGreen"
            android:text="@string/key_5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_6"
            style="@style/CalculButtonGreen"
            android:text="@string/key_6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_subtract"
            style="?calcActionButton"
            android:text="@string/key_subtract" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_3"
            style="@style/CalculButtonGreen"
            android:text="@string/key_3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_2"
            style="@style/CalculButtonGreen"
            android:text="@string/key_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_1"
            style="@style/CalculButtonGreen"
            android:text="@string/key_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_addition"
            style="?calcActionButton"
            android:text="@string/key_addition" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_0"
            style="@style/CalculButtonGreen"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:text="@string/key_0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_dot"
            style="@style/CalculButtonGreen"
            android:text="@string/key_dot" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_equal"
            style="?calcActionButton"
            android:text="@string/key_equal" />

    </GridLayout>

</FrameLayout>